# MDExtractor

./: .env  .gitignore  README.md  pyproject.toml
data/: CONSULTING COVER LETTER.docx  Questions.docx  STHLMmcKinsey.docx
infra/: docker-compose.yaml
infra/db/migrations/: 001_documents.sql
services/: README.md
services/api/app/: main.py
services/extractor/src/: extract_metadata.py
services/frontend/: app.py
