[project]
name = "md-extractor-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "python-docx>=1.1.0",
  "lxml>=5.0.0",
  "psycopg[binary]>=3.1.0",
  "redis>=5.0.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "fastapi>=0.128.0",
]

[project.scripts]
worker = "src.worker:main"

